--- a/css/Productos.css
+++ b/css/Productos.css
@@ -155,6 +155,7 @@ button:hover {
 }
 
 .contenido {
+    position: relative; /* Para que los elementos posicionados dentro estén relativos a este contenedor */
     background: white;
     padding: 20px;
     border-radius: 10px;
@@ -164,8 +165,12 @@ button:hover {
 
 .cerrar {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 10px; /* Ajusta según tu preferencia */
+    right: 10px; /* Ajusta según tu preferencia */
     font-size: 20px;
     cursor: pointer;
+    background-color: transparent; /* Sin fondo para un diseño limpio */
+    border: none;
+    color: black;
+    font-weight: bold;
 }
