--- a/css/Inicio.css
+++ b/css/Inicio.css
@@ -62,6 +62,10 @@ header h1 {
     border-radius: 50%;
 }
 
+button:hover {
+    background-color: #0056b3;
+}
+
 /* Mensaje a la derecha */
 .search-bar .message {
     text-align: right;
